styles: reply composer no longer at unsually-high z-index

--- a/ui/less/com/msg-thread.less
+++ b/ui/less/com/msg-thread.less
@@ -22,10 +22,6 @@
         height: 20px;
       }
     }
-    .container {
-      position: relative;
-      z-index: 1000;
-    }
   }
   .container {
     max-width: 600px;
